--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input id="theme-3" type="radio" name="color-mode" />
           </div>
         </div>
-        <div class="container__calculator-screen">321321</div>
+        <div class="container__calculator-screen"></div>
         <div class="container__calculator-numbers-flex">
           <div class="numbers__num7">7</div>
           <div class="numbers__num8">8</div>
