fix: fix styling of theme switching radio buttons

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <div class="container__calculator-header">
           <h2>calc</h2>
           <div class="container__calculator-header-color-theme">
-            <label for="theme-1">1</label>
             <input id="theme-1" type="radio" name="color-mode" />
-            <label for="theme-2">2</label>
+            <label class="theme-label" for="theme-1">1</label>
             <input id="theme-2" type="radio" name="color-mode" />
-            <label for="theme-3">3</label>
+            <label class="theme-label" for="theme-2">2</label>
             <input id="theme-3" type="radio" name="color-mode" />
+            <label class="theme-label" for="theme-3">3</label>
           </div>
         </div>
         <div class="container__calculator-screen"></div>
